# eveng1_python_sdk

./: .gitignore  README.md  pyproject.toml
examples/: dashboard.py  even_ai.py  interactions.py  microphone.py  ppt_teleprompter.py  send_image.py  send_text.py  simple_connect.py
src/g1_sdk/: __init__.py
src/g1_sdk/connector/: __init__.py  base.py  bluetooth.py  commands.py  pairing.py
src/g1_sdk/services/: __init__.py  device.py  display.py  events.py  health.py  state.py  status.py  uart.py
src/g1_sdk/utils/: __init__.py  logger.py
