[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "g1_sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bleak>=1.0.1",
    "rich>=14.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/g1_sdk"]